# PAMS_GC

./: DataAnalysis.py  README.md  chromclass.py  count_dat_files.py  file_management_functions.py  filestructuregenerator.py  gc_analyser.py  gc_analyzer.py  highvaluefinder.py  importtools.py  peakfitting.py  pyproject.toml  rb_mdl.csv  renameGCData.py  unzip_log.txt
.ipynb_checkpoints/: ploting-checkpoint.py
validationtools/: chrommanager.py  dataanalysis.py  file_management_functions.py  peakfitting.py  plotting.py
validationtools.egg-info/: PKG-INFO  SOURCES.txt
